Fixed a bug - mobile header overlapping modals. Modified mobile-search-form styling: footer position and border. Added user avatar image. Modified LoginSignup inputs config.

--- a/src/assets/style/cmps/_mobile-header.scss
+++ b/src/assets/style/cmps/_mobile-header.scss
@@ -4,7 +4,7 @@
     bottom: 0;
     border-top: 1px solid rgb(235, 235, 235);
     background-color: white;
-    z-index: 7;
+    z-index: 2;
     padding-block: 10.4px;
     nav {
         display: flex;
